--- a/index.html
+++ b/index.html
@@ -3,20 +3,26 @@
 
 <body>
 
-<div ng-app="myApp" ng-controller="myCtrl">
 
+<div ng-app = "APP" >
+
+<nav>
+<a href="#/">Main</a>
+<a href="#/view1">View 1</a>
+<a href="#/view2">View 2</a>
+<a href="#/view3">View 3</a>
+<a href="#/view4">View 4</a>
+<ng-view></ng-view>
+</nav>
 </div>
 
 
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.js"></script>
 
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular-route.js"></script>
 
-
-
-
-
+<script src="script.js"></script>
 </body>
 </html>
