--- a/view1.html
+++ b/view1.html
@@ -1,17 +1,6 @@
-<!DOCTYPE html>
-<html>
 
 
-<body ng-app="myApp">
-
-<div ng-init="myPic = 'cat.png'">
-<h1>Angular</h1>
-<img ng-src="{{myPic}}">
-</div>
+<h1>Cute Cat</h1>
+<img src="cat.png">
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
-
-</body>
-</html>
