--- a/view2.html
+++ b/view2.html
@@ -1,16 +1,3 @@
-<!DOCTYPE html>
-<html>
 
-<body ng-app="myApp">
-
-<div ng-init="myPic = 'dog.png'">
-<h1>Angular</h1>
-<img ng-src="{{myPic}}">
-</div>
-
-
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-route.js"></script>
-
-</body>
-</html>
+<h1>Cute Dog</h1>
+<img src="dog.png">
